name:                reflectionsort
version:             0.1.0.0
license:             GPL-3
author:              David Spies
maintainer:          david.spies@leapyear.io
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
      Lib
      Sort
      SortedList
  other-modules:
      SortedList.Internal
  build-depends:
      base
    , reflection
    , vector
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010

test-suite reflectionsort-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base
    , reflectionsort
    , hspec
    , QuickCheck
  other-modules:
      Spec.Util
  default-language: Haskell2010
